--- a/PhaseB/MovieOn/src/main/webapp/view/contactAdmin.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/contactAdmin.view.client.html
@@ -37,7 +37,7 @@
             Wishlist
             <span><i class="fa fa-star"></i></span>
         </a>
-        <a href="#1/fav">
+        <a href="#!/fav">
             Favorite Sellers
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
@@ -74,7 +74,6 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
-
 <div class="container-fluid" id="main">
     <div ng-show="model.error" class="alert alert-danger" role="alert">
         {{model.error}}
