--- a/PhaseB/MovieOn/src/main/webapp/view/address.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/address.view.client.html
@@ -19,7 +19,7 @@
 
 <div id="mySidenav" class="sidenav">
     <div ng-show="model.userId">
-        <a class="active-page" href="#!/user">Profile</a>
+        <a href="#!/profile">Profile</a>
     </div>
     <div ng-show="model.user.type == 'Buyer'">
         <a href="#!/like">
@@ -65,6 +65,7 @@
     </div>
     <div ng-show="!model.userId">
         <a href="#!/login">Login</a>
+        <a href="#!/register">Register</a>
     </div>
     <div ng-show="model.userId">
         <a ng-click="model.logout()">Logout</a>
