--- a/PhaseB/MovieOn/src/main/webapp/view/movie-buy.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/movie-buy.view.client.html
@@ -27,58 +27,58 @@
 
 <div id="mySidenav" class="sidenav">
     <div ng-show="model.userId">
-        <a href="#/user">Profile</a>
+        <a href="#!/profile">Profile</a>
     </div>
     <div ng-show="model.user.type == 'Buyer'">
-        <a href="#/like">
+        <a href="#!/like">
             Likes
             <span><i class="fa fa-thumbs-up"></i></span>
         </a>
-        <a href="#/bought">
+        <a href="#!/bought">
             Bought
             <span><i class="fa fa-file-video-o"></i></span>
         </a>
-        <a href="#/wishlist">
+        <a href="#!/wishlist">
             Wishlist
             <span><i class="fa fa-star"></i></span>
         </a>
-        <a href="#/fav">
+        <a href="#!/fav">
             Favorite Sellers
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
     </div>
     <div ng-show="model.user.type == 'Seller'">
-        <a href="#/order">
+        <a href="#!/order">
             Orders
             <span><i class="fa fa-usd"></i></span>
         </a>
-        <a href="#/inventory">
+        <a href="#!/inventory">
             Inventory
             <span><i class="fa fa-table"></i></span>
         </a>
     </div>
     <div ng-show="model.user.type == 'Admin'">
-        <a href="#/users">
+        <a href="#!/users">
             All Users
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
-        <a href="#/msgs">
+        <a href="#!/msgs">
             Messages
             <span><i class="fa fa-envelope"></i></span>
         </a>
-        <a href="#/orders">
+        <a href="#!/orders">
             All Orders
             <span><i class="fa fa-shopping-basket"></i></span>
         </a>
     </div>
     <div ng-show="!model.userId">
-        <a href="#/login">Login</a>
+        <a href="#!/login">Login</a>
+        <a href="#!/register">Register</a>
     </div>
     <div ng-show="model.userId">
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
-
 <div class="container-fluid" id="main">
     <h3 class="panel panel-default">Sellers</h3>
     <div class="list-group">
@@ -91,7 +91,7 @@
                     <i class="fa fa-heart-o fa-2x" ng-click="model.followSeller(seller.seller, $index)"></i>
                 </a>
                 <a ng-if="seller.followed" class="imdb" style="float: left; margin-top: 15px">
-                    <i class="fa fa-heart fa-2x red" ng-click="model.unfollowSeller(seller._id, $index)"></i>
+                    <i class="fa fa-heart fa-2x red" ng-click="model.unfollowSeller(seller.seller.id, $index)"></i>
                 </a>
                 <h5><strong>Name: {{seller.firstName}} {{seller.lastName}}</strong></h5>
                 <h6>Known as: {{seller.username}}</h6>
