--- a/PhaseB/MovieOn/src/main/webapp/view/userApprove.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/userApprove.view.client.html
@@ -18,9 +18,62 @@
 </nav>
 
 <div id="mySidenav" class="sidenav">
-    <a href="#!/profile">Profile</a>
-    <a class="active-page">Approve users</a>
-    <a ng-click="model.logout()">Logout</a>
+    <div ng-show="model.userId">
+        <a href="#!/profile">Profile</a>
+    </div>
+    <div ng-show="model.user.type == 'Buyer'">
+        <a href="#!/like">
+            Likes
+            <span><i class="fa fa-thumbs-up"></i></span>
+        </a>
+        <a href="#!/bought">
+            Bought
+            <span><i class="fa fa-file-video-o"></i></span>
+        </a>
+        <a href="#!/wishlist">
+            Wishlist
+            <span><i class="fa fa-star"></i></span>
+        </a>
+        <a href="#!/fav">
+            Favorite Sellers
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+    </div>
+    <div ng-show="model.user.type == 'Seller'">
+        <a href="#!/order">
+            Orders
+            <span><i class="fa fa-usd"></i></span>
+        </a>
+        <a href="#!/inventory">
+            Inventory
+            <span><i class="fa fa-table"></i></span>
+        </a>
+    </div>
+    <div ng-show="model.user.type == 'Admin'">
+        <a href="#!/userApprove">
+            Approve Sellers
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/users">
+            All Users
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+        <a href="#!/msgs">
+            Messages
+            <span><i class="fa fa-envelope"></i></span>
+        </a>
+        <a href="#!/orders">
+            All Orders
+            <span><i class="fa fa-shopping-basket"></i></span>
+        </a>
+    </div>
+    <div ng-show="!model.userId">
+        <a href="#!/login">Login</a>
+        <a href="#!/register">Register</a>
+    </div>
+    <div ng-show="model.userId">
+        <a ng-click="model.logout()">Logout</a>
+    </div>
 </div>
 <div class="container-fluid panel panel-default" id="main">
     <div ng-show="model.message" class="alert alert-info" role="alert">
