--- a/PhaseB/MovieOn/src/main/webapp/view/movie.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/movie.view.client.html
@@ -123,7 +123,7 @@
                             <input ng-model="model.num" type="number" class="form-control fixwidth" placeholder="#Copies">
                         </div>
                         <div class="col-md-4 col-sm-4 col-xs-4" ng-if="model.inventory">
-                            <button ng-click="model.updateInventory(model.inventory.copies)"
+                            <button ng-click="model.updateInventoryForMovie(model.inventory.copies)"
                                     type="button"
                                     class="btn btn-warning shift-down"
                                     data-toggle="modal"
