--- a/PhaseB/MovieOn/src/main/webapp/view/movie-buy.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/movie-buy.view.client.html
@@ -103,7 +103,7 @@
             </div>
             <div class="col-md-4 col-sm-4 col-xs-6 center">
                 <button type="button"
-                        ng-click="model.buyMovie(seller._id)"
+                        ng-click="model.buyMovie(seller.seller.id)"
                         class="btn btn-warning"
                         data-toggle="modal"
                         data-target="#myModal"
