movies bought sold

--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -183,7 +183,7 @@
                 <span class="glyphicon glyphicon-user"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a>Profile</a></li>
+                <li ng-show="model.userId"><a href="#/profile">Profile</a></li>
                 <li><a ng-click="model.logout()">Logout</a></li>
             </ul>
         </div>
