--- a/PhaseB/MovieOn/src/main/webapp/view/user-wishlist.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/user-wishlist.view.client.html
@@ -12,7 +12,7 @@
             <a class="name" href="#/user">Hi {{model.user.firstName}}</a>
         </div>
         <div class="navbar-header">
-            <a class="navbar-brand" ng-click="model.gotoHome()">Planet M</a>
+            <a class="navbar-brand" href="#!/home">MovieOn</a>
         </div>
     </div>
 </nav>
@@ -111,7 +111,7 @@
                 <span class="glyphicon glyphicon-user"></span>
             </a>
             <ul class="dropdown-menu">
-                <li ng-show="model.userId"><a href="#/user">Profile</a></li>
+                <li ng-show="model.userId"><a href="#/profile">Profile</a></li>
                 <li ng-show="model.userId"><a ng-click="model.logout()">Logout</a></li>
             </ul>
         </div>
