--- a/PhaseB/MovieOn/src/main/webapp/view/userApprove.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/userApprove.view.client.html
@@ -12,7 +12,7 @@
             <a class="name" href="#!/profile">Hi {{model.user.firstName}}</a>
         </div>
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/profile">MovieOn</a>
+            <a class="navbar-brand" href="#!/home">MovieOn</a>
         </div>
     </div>
 </nav>
@@ -123,7 +123,7 @@
                 <span class="glyphicon glyphicon-user"></span>
             </a>
             <ul class="dropdown-menu">
-                <li><a>Profile</a></li>
+                <li ng-show="model.userId"><a href="#/profile">Profile</a></li>
                 <li><a ng-click="model.logout()">Logout</a></li>
             </ul>
         </div>
