--- a/PhaseB/MovieOn/src/main/webapp/view/register.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/register.view.client.html
@@ -78,7 +78,7 @@
                 <input ng-model="user.email" type="email" class="form-control" placeholder="Email Address" aria-describedby="basic-addon1" required>
             </div>
             <br>
-            <label>Student/Professor</label>
+            <label>Buyer/Seller/Critic</label>
             <div class="input-group button-down">
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon glyphicon-briefcase user-grey"></span>
@@ -87,6 +87,7 @@
                 <select ng-model="user.type" type="text" class="form-control" placeholder="Buyer/Seller" aria-describedby="basic-addon1" required>
                     <option>Buyer</option>
                     <option>Seller</option>
+                    <option>Critic</option>
                 </select>
             </div>
             <button class="btn btn-primary btn-block"
