--- a/PhaseB/MovieOn/src/main/webapp/view/home.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/home.view.client.html
@@ -53,17 +53,9 @@
         </a>
     </div>
     <div ng-show="model.user.type == 'Admin'">
-        <a href="#!/users">
-            All Users
+        <a href="#!/userApprove">
+            Approve Users
             <span><i class="fa fa-user-circle-o"></i></span>
-        </a>
-        <a href="#!/msgs">
-            Messages
-            <span><i class="fa fa-envelope"></i></span>
-        </a>
-        <a href="#!/orders">
-            All Orders
-            <span><i class="fa fa-shopping-basket"></i></span>
         </a>
     </div>
     <div ng-show="!model.userId">
@@ -74,7 +66,6 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
-
 <div id="main">
     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-wrap=true>
         <ol class="carousel-indicators">
