--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -50,17 +50,9 @@
         </a>
     </div>
     <div ng-show="model.user.type == 'Admin'">
-        <a href="#!/users">
-            All Users
+        <a href="#!/userApprove">
+            Approve Users
             <span><i class="fa fa-user-circle-o"></i></span>
-        </a>
-        <a href="#!/msgs">
-            Messages
-            <span><i class="fa fa-envelope"></i></span>
-        </a>
-        <a href="#!/orders">
-            All Orders
-            <span><i class="fa fa-shopping-basket"></i></span>
         </a>
     </div>
     <div ng-show="!model.userId">
