--- a/PhaseB/MovieOn/src/main/webapp/view/search.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/search.view.client.html
@@ -87,7 +87,7 @@
 
     <div class="row content">
         <div class="col-md-3 col-sm-4 col-xs-6" ng-repeat="movie in model.movies">
-            <a href="#!/movie/movie.id" class="thumbnail">
+            <a href="#!/movie/{{movie.id}}" class="thumbnail">
                 <img class="img-responsive img" ng-src="{{movie.backdrop_path}}">
                 <div class = "caption">
                     <h4 class="text-center hideOverflow">{{movie.title}}</h4>
