--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -38,6 +38,10 @@
             Favorite Sellers
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
+        <a href="#!/buyerReview">
+            Reviews
+            <span><i class="fa fa-table"></i></span>
+        </a>
     </div>
     <div ng-show="model.user.type == 'Seller'">
         <a href="#!/order">
@@ -46,6 +50,10 @@
         </a>
         <a href="#!/inventory">
             Inventory
+            <span><i class="fa fa-table"></i></span>
+        </a>
+        <a href="#!/sellerReview">
+            Reviews
             <span><i class="fa fa-table"></i></span>
         </a>
     </div>
