--- a/PhaseB/MovieOn/src/main/webapp/view/contactAdmin.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/contactAdmin.view.client.html
@@ -41,6 +41,10 @@
             Favorite Sellers
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
+        <a href="#!/buyerReview">
+            Reviews
+            <span><i class="fa fa-table"></i></span>
+        </a>
     </div>
     <div ng-show="model.user.type == 'Seller'">
         <a href="#!/order">
@@ -51,19 +55,15 @@
             Inventory
             <span><i class="fa fa-table"></i></span>
         </a>
+        <a href="#!/sellerReview">
+            Reviews
+            <span><i class="fa fa-table"></i></span>
+        </a>
     </div>
     <div ng-show="model.user.type == 'Admin'">
-        <a href="#!/users">
-            All Users
+        <a href="#!/userApprove">
+            Approve Users
             <span><i class="fa fa-user-circle-o"></i></span>
-        </a>
-        <a href="#!/msgs">
-            Messages
-            <span><i class="fa fa-envelope"></i></span>
-        </a>
-        <a href="#!/orders">
-            All Orders
-            <span><i class="fa fa-shopping-basket"></i></span>
         </a>
     </div>
     <div ng-show="!model.userId">
