review for movies for critic

--- a/PhaseB/MovieOn/src/main/webapp/view/buyer-review.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/buyer-review.view.client.html
@@ -92,7 +92,7 @@
         <p class="copyright hidden-xs">© Northeastern CCIS 2018</p>
         <div class="dropdown navbar-text pull-left" ng-if="model.user.type != 'Admin'">
             <a href="" class="navbar-link dropdown-toggle" type="button" data-toggle="dropdown">
-                <span class="glyphicon glyphicon-flag"></span>
+                Need help?
             </a>
             <ul class="dropdown-menu">
                 <li><a ng-click="model.contactAdmin()">Contact Admin</a></li>
