--- a/PhaseB/MovieOn/src/main/webapp/view/home.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/home.view.client.html
@@ -66,6 +66,12 @@
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
     </div>
+    <div ng-show="model.user.type == 'Critic'">
+        <a href="#!/movieReview">
+            Reviews
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+    </div>
     <div ng-show="!model.userId">
         <a href="#!/login">Login</a>
         <a href="#!/register">Register</a>
