--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -63,6 +63,12 @@
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
     </div>
+    <div ng-show="model.user.type == 'Critic'">
+        <a href="#!/movieReview">
+            Reviews
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+    </div>
     <div ng-show="!model.userId">
         <a href="#!/login">Login</a>
         <a href="#!/register">Register</a>
@@ -71,7 +77,6 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
-
 
 <div class="form-center2">
     <div class="container-fluid panel panel-default" id="main">
@@ -170,7 +175,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="copyright hidden-xs">© Northeastern CCIS 2018</p>
-        <div class="dropdown navbar-text pull-left" ng-if="model.user.role != 'admin'">
+        <div class="dropdown navbar-text pull-left" ng-if="model.user.role != 'Admin'">
             <a href="" class="navbar-link dropdown-toggle" type="button" data-toggle="dropdown">
                 Need help?
             </a>
