--- a/PhaseB/MovieOn/src/main/webapp/view/user-review.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/user-review.view.client.html
@@ -62,6 +62,12 @@
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
     </div>
+    <div ng-show="model.user.type == 'Critic'">
+        <a href="#!/movieReview">
+            Reviews
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
+    </div>
     <div ng-show="!model.userId">
         <a href="#!/login">Login</a>
         <a href="#!/register">Register</a>
@@ -70,7 +76,6 @@
         <a ng-click="model.logout()">Logout</a>
     </div>
 </div>
-
 <div class="container-fluid" id="main">
     <h4><strong>Seller Reviews</strong></h4>
     <div class="panel panel-primary" ng-repeat="review in model.sellerReviews">
@@ -93,7 +98,7 @@
         <p class="copyright hidden-xs">© Northeastern CCIS 2018</p>
         <div class="dropdown navbar-text pull-left" ng-if="model.user.type != 'Admin'">
             <a href="" class="navbar-link dropdown-toggle" type="button" data-toggle="dropdown">
-                <span class="glyphicon glyphicon-flag"></span>
+                Need help?
             </a>
             <ul class="dropdown-menu">
                 <li><a ng-click="model.contactAdmin()">Contact Admin</a></li>
