--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -179,7 +179,7 @@
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="copyright hidden-xs">© Northeastern CCIS 2018</p>
-        <div class="dropdown navbar-text pull-left" ng-if="model.user.role != 'Admin'">
+        <div class="dropdown navbar-text pull-left" ng-if="model.user.type != 'Admin'">
             <a href="" class="navbar-link dropdown-toggle" type="button" data-toggle="dropdown">
                 Need help?
             </a>
