--- a/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
+++ b/PhaseB/MovieOn/src/main/webapp/view/profile.view.client.html
@@ -66,6 +66,10 @@
             Edit Users
             <span><i class="fa fa-user-circle-o"></i></span>
         </a>
+        <a href="#!/userContact">
+            Contact Notes
+            <span><i class="fa fa-user-circle-o"></i></span>
+        </a>
     </div>
     <div ng-show="model.user.type == 'Critic'">
         <a href="#!/movieReview">
